--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,12 @@
             <a class="nav-link active" aria-current="page" routerLink="/altaProducto" *ngIf="estaLogueado">Alta Producto</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/detalleProducto" *ngIf="estaLogueado">Detalle Producto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/detalleProductoPublicos">Detalle Productos Publicos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/ingreso/login" *ngIf="!estaLogueado">Login</a>
           </li>
         </ul>
